Переправил ссылки на файлы прямо на Гитхаб
Ссылки .editorconfig обрабатывались Гитхабом неправильно.

--- a/app/templates/partials/html/rules/html-syntax.hbs
+++ b/app/templates/partials/html/rules/html-syntax.hbs
@@ -1,6 +1,6 @@
 <h4>Синтаксис</h4>
 <ul>
-  <li>Для отступов у&nbsp;вложенных элементов используются два пробела. Для правильного форматирования используйте файл <a href="{{resolve '.editorconfig'}}" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
+  <li>Для отступов у&nbsp;вложенных элементов используются два пробела. Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/app/files/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
   <li>Теги и&nbsp;их&nbsp;атрибуты пишутся строчными буквами. Для значений атрибутов всегда используются двойные кавычки.</li>
   <li>Необязательный закрывающий слеш у&nbsp;одиночных тегов (<code>&lt;img&gt;</code>, <code>&lt;br&gt;</code> и&nbsp;другие) не&nbsp;ставится.</li>
   <li>Необязательные закрывающие теги (например, <code>&lt;/li&gt;</code> или <code>&lt;/body&gt;</code>) не&nbsp;пропускаются.</li>
