Убрал блок про вертикальное выравнивание

--- a/app/templates/partials/css/css-recomendations.hbs
+++ b/app/templates/partials/css/css-recomendations.hbs
@@ -36,3 +36,16 @@
     </figure>
   </div>
 </article>
+
+<article class="chapter-part">
+  <div class="chapter-part-col">
+    {{~> css/rules/css-vertical-align ~}}
+  </div>
+  <div class="chapter-part-col">
+    <figure>
+      <pre><code class="language-css">
+        {{~> css/examples/css-vertical-align-example ~}}
+      </code></pre>
+    </figure>
+  </div>
+</article>
