🎓 Добавил изометрию в шапку

--- a/app/css/header.css
+++ b/app/css/header.css
@@ -4,6 +4,9 @@ header {
   text-align: center;
 
   background-color: var(--brand-color);
+  background-image:
+    repeating-linear-gradient(150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px),
+    repeating-linear-gradient(-150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px);
 
   @media (--viewport-medium) {
     padding-top: 4rem;
