--- a/app/css/variables.css
+++ b/app/css/variables.css
@@ -2,7 +2,7 @@
   --base-px-size: 16px;
   --large-px-size: calc(var(--base-px-size) * 1.25);
 
-  --brand-color: #2e3191;
+  --brand-color: #312785;
   --brand-color-dark: #2d2d44;
 
   --dark-color: #5a5a5a;
