🙈 Заменил `стиль кодирования` на `стиль кода`

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Стиль кодирования Академии HTML</title>
+    <title>Стиль кода Академии HTML</title>
     <link rel="stylesheet" href="{{resolve 'style.css'}}">
   </head>
   <body>
