--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,7 +1,7 @@
 <footer>
   <div class="contacts">
     <a class="logo-full" href="https://htmlacademy.ru">
-      <img src="{{resolve 'logo-full.svg'}}" width="161" height="55" alt="HTML Academy">
+      <img src="{{resolve 'logo-full.svg'}}" width="161" height="55" alt="HTML Academy" title="HTML Academy">
     </a>
     <div class="social-icons">
       <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank">
