--- a/app/templates/partials/header.hbs
+++ b/app/templates/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
   <a href="https://htmlacademy.ru" target="_blank">
-    <img class="logo" src="{{resolve 'bane.svg'}}" width="300" alt="HTML Academy">
+    <img class="logo" src="{{resolve 'bane.svg'}}" width="300" alt="HTML Academy" title="HTML Academy">
   </a>
-  <h1>Стиль кодирования Академии HTML</h1>
+  <h1>Стиль кода Академии HTML</h1>
 </header>
