--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Стиль кода Академии HTML</title>
     <link rel="stylesheet" href="{{resolve 'style.css'}}">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@htmlacademy_ru">
+    <meta name="twitter:image" content="https://htmlacademy.github.io/codeguide/img/og.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://htmlacademy.github.io/codeguide/">
+    <meta property="og:title" itemprop="name" content="Стиль кода Академии HTML">
+    <meta property="og:image" itemprop="image" content="https://htmlacademy.github.io/codeguide/img/og.png">
   </head>
   <body>
 
