--- a/app/templates/partials/css/rules/css-class-names.hbs
+++ b/app/templates/partials/css/rules/css-class-names.hbs
@@ -1,4 +1,4 @@
-<h4>Имена классов</h4>
+<h4 id="css-class-names">Имена классов</h4>
 <ul>
   <li>Имена классов пишутся строчными буквами, используется дефис (но&nbsp;не&nbsp;знаки нижнего подчёркивания или camelCase). Дефисы служат разделителями во&nbsp;взаимосвязанных классах (например, <code>.button</code> и <code>.button-danger</code>).</li>
   <li>Имена классов должны быть такими, чтобы по&nbsp;ним можно было быстро понять какому элементу страницы задан класс: избегайте сокращений (единственное исключение&nbsp;&mdash; <code>.btn</code> для кнопок), но&nbsp;не&nbsp;делайте их&nbsp;слишком длинными (более трёх слов).</li>
