--- a/app/templates/partials/css/rules/css-font-variant.hbs
+++ b/app/templates/partials/css/rules/css-font-variant.hbs
@@ -1,4 +1,4 @@
-<h4>Варианты шрифта</h4>
+<h4 id="css-font-variant">Варианты шрифта</h4>
 <p>
   Альтернативные варианты шрифта и&nbsp;тип семейства указываются в&nbsp;конце перечисления <code>font-family</code>.
 </p>
