--- a/app/templates/partials/css/rules/css-import.hbs
+++ b/app/templates/partials/css/rules/css-import.hbs
@@ -1,4 +1,4 @@
-<h4>Правило <code>@import</code></h4>
+<h4 id="css-import">Правило <code>@import</code></h4>
 <p>
   Правило <code>@import</code> работает медленнее, чем тег <code>&lt;link&gt;</code>. В&nbsp;стилях <code>@import</code> не&nbsp;должен использоваться.
 </p>
