--- a/app/templates/partials/css/rules/css-order.hbs
+++ b/app/templates/partials/css/rules/css-order.hbs
@@ -1,4 +1,4 @@
-<h4>Порядок свойств</h4>
+<h4 id="css-order">Порядок свойств</h4>
 <p>
   Объявления логически связанных свойств группируются в&nbsp;следующем порядке:
 </p>
