--- a/app/templates/partials/css/rules/css-syntax.hbs
+++ b/app/templates/partials/css/rules/css-syntax.hbs
@@ -1,4 +1,4 @@
-<h4>Синтаксис</h4>
+<h4 id="css-syntax">Синтаксис</h4>
 <ul>
   <li>После значения свойства обязательно ставится точка с&nbsp;запятой.</li>
   <li>Для отступов внутри правил используются два пробела. Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
