--- a/app/templates/partials/css/rules/css-vertical-align.hbs
+++ b/app/templates/partials/css/rules/css-vertical-align.hbs
@@ -1,4 +1,4 @@
-<h4>Указание <code>vertical-align</code></h4>
+<h4 id="css-vertical-align">Указание <code>vertical-align</code></h4>
 <p>
   Значение <code>vertical-align</code> должно быть <i>явно</i> указано для блоков с <code>display: inline-block</code>.
 </p>
