--- a/app/templates/partials/html/html-rules.hbs
+++ b/app/templates/partials/html/html-rules.hbs
@@ -2,7 +2,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-syntax ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-syntax-example ~}}
@@ -16,11 +16,12 @@
     {{~> html/rules/html-validator ~}}
   </div>
 </article>
+
 <article class="chapter-part">
   <div class="chapter-part-col">
     {{~> html/rules/html-doctype ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-doctype-example ~}}
@@ -33,7 +34,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-encoding ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-encoding-example ~}}
@@ -46,7 +47,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-style-includes ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-style-includes-example ~}}
@@ -59,7 +60,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-js-includes ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-js-includes-example ~}}
@@ -72,7 +73,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-attribute-order ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-attribute-order-example ~}}
@@ -85,7 +86,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-boolean ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-boolean-example ~}}
@@ -98,7 +99,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-form-labels ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-form-labels-example ~}}
@@ -111,7 +112,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-img-sizes ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-img-sizes-example ~}}
@@ -124,7 +125,7 @@
   <div class="chapter-part-col">
     {{~> html/rules/html-language ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> html/examples/html-language-example ~}}
