--- a/app/templates/partials/html/rules/html-doctype.hbs
+++ b/app/templates/partials/html/rules/html-doctype.hbs
@@ -1,4 +1,4 @@
-<h4>HTML доктайп</h4>
+<h4 id="html-doctype">HTML-доктайп</h4>
 <p>
   В&nbsp;начале страницы обязательно должен быть указан актуальный <code>doctype</code>, чтобы браузер отображал её&nbsp;в&nbsp;режиме соответствия стандартам. Это гарантирует, что страница будет выглядеть единообразно во&nbsp;всех современных браузерах.
 </p>
