--- a/app/templates/partials/html/rules/html-form-labels.hbs
+++ b/app/templates/partials/html/rules/html-form-labels.hbs
@@ -1,4 +1,4 @@
-<h4>Подписи полей ввода</h4>
+<h4 id="html-form-labels">Подписи полей ввода</h4>
 <p>
   Для улучшения взаимодействия пользователя с&nbsp;элементами форм, при нажатии на&nbsp;подпись поля, оно должно активироваться. Для этого элемент формы связывается с&nbsp;его описанием с&nbsp;помощью идентификатора и&nbsp;атрибута <code>for</code> тега <code>&lt;label&gt;</code>.
 </p>
