--- a/app/templates/partials/html/rules/html-js-includes.hbs
+++ b/app/templates/partials/html/rules/html-js-includes.hbs
@@ -1,4 +1,4 @@
-<h4>Подключение скриптов</h4>
+<h4 id="html-js-includes">Подключение скриптов</h4>
 <p>
   Скрипты должны подключаться в&nbsp;самом низу страницы, чтобы при её&nbsp;загрузке не&nbsp;блокировать отображение содержимого.
 </p>
