--- a/app/templates/partials/html/rules/html-language.hbs
+++ b/app/templates/partials/html/rules/html-language.hbs
@@ -1,4 +1,4 @@
-<h4>Атрибут языка</h4>
+<h4 id="html-language">Атрибут языка</h4>
 <p>
   Для элемента <code>&lt;html&gt;</code> в&nbsp;атрибуте <code>lang</code> должен указываться соответствующий язык документа. Это помогает инструментам синтеза речи определить, какое использовать произношение или системам перевода, какие использовать языковые правила.
 </p>
