--- a/app/templates/partials/html/rules/html-syntax.hbs
+++ b/app/templates/partials/html/rules/html-syntax.hbs
@@ -1,4 +1,4 @@
-<h4>Синтаксис</h4>
+<h4 id="html-syntax">Синтаксис</h4>
 <ul>
   <li>Для отступов у&nbsp;вложенных элементов используются два пробела. Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
   <li>Теги и&nbsp;их&nbsp;атрибуты пишутся строчными буквами. Для значений атрибутов всегда используются двойные кавычки.</li>
