--- a/app/templates/partials/html/rules/html-validator.hbs
+++ b/app/templates/partials/html/rules/html-validator.hbs
@@ -1,4 +1,4 @@
-<h4>Валидность</h4>
+<h4 id="html-validator">Валидность</h4>
 <p>
   Документ должен проходить проверку на&nbsp;валидность. Для проверки используется <a href="http://validator.w3.org/nu/" target="_blank">современный валидатор</a>.
 </p>
