--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -18,6 +18,38 @@
       {{~> header ~}}
 
       <section class="chapter">
+        <h2>Оглавление</h2>
+        <article class="chapter-part">
+          <div class="chapter-part-col">
+            <h4>HTML</h4>
+            <ul>
+              <li><a href="#html-syntax">Синтаксис</a></li>
+              <li><a href="#html-validator">Валидность</a></li>
+              <li><a href="#html-doctype">HTML-доктайп</a></li>
+              <li><a href="#html-encoding">Кодировка символов</a></li>
+              <li><a href="#html-style-includes">Подключение стилей</a></li>
+              <li><a href="#html-js-includes">Подключение скриптов</a></li>
+              <li><a href="#html-attribute-order">Порядок атрибутов</a></li>
+              <li><a href="#html-boolean">Логические атрибуты</a></li>
+              <li><a href="#html-form-labels">Подписи полей ввода</a></li>
+              <li><a href="#html-img-sizes">Размеры картинок</a></li>
+              <li><a href="#html-language">Атрибут языка</a></li>
+            </ul>
+          </div>
+          <div class="chapter-part-col">
+            <h4>CSS</h4>
+            <ul>
+              <li><a href="#css-syntax">Синтаксис</a></li>
+              <li><a href="#css-order">Порядок свойств</a></li>
+              <li><a href="#css-class-names">Имена классов</a></li>
+              <li><a href="#css-import">Правило @import</a></li>
+              <li><a href="#css-font-variant">Варианты шрифта</a></li>
+            </ul>
+          </div>
+        </article>
+      </section>
+
+      <section class="chapter">
         <h2>HTML</h2>
         {{~> html/html-rules ~}}
       </section>
