--- a/app/templates/partials/css/css-rules.hbs
+++ b/app/templates/partials/css/css-rules.hbs
@@ -2,7 +2,7 @@
   <div class="chapter-part-col">
     {{~> css/rules/css-syntax ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">
         {{~> css/examples/css-syntax-example ~}}
@@ -15,7 +15,7 @@
   <div class="chapter-part-col">
     {{~> css/rules/css-order ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">
         {{~> css/examples/css-order-example ~}}
@@ -28,7 +28,7 @@
   <div class="chapter-part-col">
     {{~> css/rules/css-class-names ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">
         {{~> css/examples/css-class-names-example ~}}
@@ -41,7 +41,7 @@
   <div class="chapter-part-col">
     {{~> css/rules/css-import ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">
         {{~> css/examples/css-import-example ~}}
@@ -54,7 +54,7 @@
   <div class="chapter-part-col">
     {{~> css/rules/css-font-variant ~}}
   </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">
         {{~> css/examples/css-font-variant-example ~}}
