--- a/app/templates/partials/html/rules/html-img-sizes.hbs
+++ b/app/templates/partials/html/rules/html-img-sizes.hbs
@@ -1,4 +1,4 @@
-<h4>Размеры картинок</h4>
+<h4 id="html-img-sizes">Размеры картинок</h4>
 <p>
   Изображениям <code>&lt;img&gt;</code> должны быть явно заданы с&nbsp;помощью атрибута размеры в&nbsp;пикселях или в&nbsp;процентах. В&nbsp;случае пикселей размерность не&nbsp;нужна.
 </p>
