🎓 Добавил ссылку на репозиторий

--- a/app/css/header.css
+++ b/app/css/header.css
@@ -17,6 +17,16 @@ header {
 
     color: var(--light-color);
   }
+
+  p {
+    margin-top: 0;
+
+    font-size: 1.2rem;
+  }
+
+  a:any-link {
+    color: var(--light-color);
+  }
 }
 
 .logo {
