--- a/app/templates/partials/header.hbs
+++ b/app/templates/partials/header.hbs
@@ -3,4 +3,5 @@
     <img class="logo" src="{{resolve 'bane.svg'}}" width="300" height="300" alt="HTML Academy" title="HTML Academy">
   </a>
   <h1>Стиль кода Академии HTML</h1>
+  <p><a href="https://github.com/htmlacademy/codeguide">github.com/htmlacademy/codeguide</a></p>
 </header>
