--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Стиль кода Академии HTML</title>
     <link rel="stylesheet" href="{{resolve 'style.css'}}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@htmlacademy_ru">
     <meta name="twitter:image" content="https://htmlacademy.github.io/codeguide/img/og.png">
