Причесал CSS согласно конфигу

--- a/app/css/header.css
+++ b/app/css/header.css
@@ -4,9 +4,7 @@ header {
   text-align: center;
 
   background-color: var(--brand-color);
-  background-image:
-    repeating-linear-gradient(150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px),
-    repeating-linear-gradient(-150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px);
+  background-image: repeating-linear-gradient(150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px), repeating-linear-gradient(-150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px);
 
   @media (--viewport-medium) {
     padding-bottom: 4rem;
