Добавил ссылки на конфиги в тексте

--- a/app/templates/partials/css/rules/css-syntax.hbs
+++ b/app/templates/partials/css/rules/css-syntax.hbs
@@ -17,5 +17,6 @@
 </code></pre></li>
   <li>Закрывающая фигурная скобка пишется на&nbsp;новой строке и&nbsp;без отступа. Следующее после этого правило отделяется пустой строкой.</li>
   <li>Единицы измерения не&nbsp;пишутся, там где в&nbsp;них нет необходимости. Например, <code>border:&nbsp;0</code>.</li>
+  <li>Для проверки CSS-кода используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/.stylelintrc" target="_blank">.stylelintrc</a> для настройки валидатора <a href="http://stylelint.io" target="_blank">stylelint</a>.</li>
   <li>Для автоматического применения этих правил используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/csscomb.json" target="_blank">csscomb.json</a> для настройки <a href="http://csscomb.com" target="_blank">CSSComb</a>.</li>
 </ul>
