--- a/app/templates/partials/html/rules/html-syntax.hbs
+++ b/app/templates/partials/html/rules/html-syntax.hbs
@@ -4,4 +4,5 @@
   <li>Теги и&nbsp;их&nbsp;атрибуты пишутся строчными буквами. Для значений атрибутов всегда используются двойные кавычки.</li>
   <li>Необязательный закрывающий слеш у&nbsp;одиночных тегов (<code>&lt;img&gt;</code>, <code>&lt;br&gt;</code> и&nbsp;другие) не&nbsp;ставится.</li>
   <li>Необязательные закрывающие теги (например, <code>&lt;/li&gt;</code> или <code>&lt;/body&gt;</code>) не&nbsp;пропускаются.</li>
+  <li>Для проверки HTML-кода используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/.stylelintrc" target="_blank">.htmlhintrc</a> для настройки валидатора <a href="http://htmlhint.com" target="_blank">HTMLHint</a>.</li>
 </ul>
