--- a/app/css/general.css
+++ b/app/css/general.css
@@ -54,7 +54,7 @@ h4 {
 
 code,
 pre {
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: "Consolas", "Liberation Mono", "Menlo", "Courier", monospace;
 }
 
 code {
