Добавляет текст правил форматирования кода

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -1,5 +1,7 @@
 # Синтаксис и лексика
 ## Отступы, пробелы и переносы
+Для правильного форматирования используйте файл .editorconfig в вашем редакторе.
+
 'indent': ['error', 2, {
     SwitchCase: 1,
     // continuation indent
@@ -9,32 +11,97 @@
     FunctionExpression: {parameters: 2},
     CallExpression: {arguments: 2}
 }],
+- Для отступов используются два пробела. Знак табуляции не используется. При переносах в продолжении строки используется четыре пробела.
+
 'no-irregular-whitespace': 'error', // eslint:recommended
+- Запрещено одновременное использование табов и пробелов для отступов.
+
 'no-unexpected-multiline': 'error', // eslint:recommended
+- Выражения должны заканчиваться точками с запятой.
+
 'no-multi-spaces': 'error',
+- Внутри строки не используется более одного пробела.
+
 'brace-style': 'error',
+- Открывающие скобки блоков кода находятся на одной строке с оператором, которых их использует
+```javascript
+// Плохо:
+if (condition)
+{
+  // code
+}
+
+// Хорошо
+if (condition) {
+  // code
+}
+```
+
 'block-spacing': ['error', 'always'],
+- В однострочных блоках кода, код отделен от открывающей и закрывающей скобки пробелом
+
 'array-bracket-spacing': ['error', 'never'],
+- В однострочных массивах скобки не отделяются пробелами, первое значение идет непосредственно после закрывающей скобки, а закрывающая скобка идет непосредственно после последнего значения массива
+
 'comma-spacing': 'error',
+- После запятой всегда должен ставиться пробел, если запятая не в конце строки
+
 'comma-style': 'error',
+- Запрещено переносить запятую на новую строку при создании множественных переменных через один var, при объявлении массивов и объектов. Запрещено использовать запятую в конце списков, объектов или наоборов параметров функции.
+
 'eol-last': 'error',
+- Файл должен заканчиваться пустой строкой
+
 'no-trailing-spaces': 'error',
+- Строка не должна заканчиваться пробелами
+
 'object-curly-spacing': 'error',
+- В однострочных объектах и при деструктуризации фигурные скобки отбиваются пробелами с двух сторон
+
 'no-mixed-spaces-and-tabs': 'error', // eslint:recommended
+- В коде не используются совместно табы и пробелы
+
 'no-multiple-empty-lines': ['error', {max: 2}],
+- Блоки кода отделяются друг от друга не более чем двумя пустыми строками
+
 'linebreak-style': 'off', // check this in git
+- В качестве символа строки используется стандартный символ, который используется в системе
+
 'computed-property-spacing': 'error',
+- При объявлении вычисляемых ключей в объектах с помощью синтаксиса ES2016 в квадратных скобках не используются пробелы
+
 'func-call-spacing': 'error',
+- Оператор вызова функции () не отделяется круглыми скобками от названия функции
+
 'key-spacing': 'error',
+- В объектах после объявления ключа не ставится пробел. После двоеточия, которое отделяет в объектах ключ от значения может стоять только один пробел, выравнивать несколько значений при объявлении многострочного объекта запрещено
+
 'keyword-spacing': 'error',
+- Ключевые слова отделяются пробелами. Правило касается всех блоков, которые не оговорены отдельно в других правилах. В частности ключевые слова должны отделяться пробелами для условных операторов, циклов, операторов множественного выбора, блоков try..catch, объявлений классов и т. д.
+
 'padded-blocks': ['off', 'never'],
+- В блоках кода первая и последняя строка не должны быть пустыми (код не отбивается от начала блока кода)
+
 'semi-spacing': 'error',
+- После двоеточий и точек с запятым ставятся пробелы. Перед ними — не ставятся.
+
 'space-before-blocks': 'error',
+- Перед скобками начинающими новый блок кода должен ставиться пробел.
+
 'space-before-function-paren': ['error', {named: 'never', anonymous: 'always'}],
+- при объявлении анонимных функций, скобки с параметрами ставятся непосредственно после ключевого слова function. Если функция именована, перед названием ставится пробел, после — нет.
+
 'spaced-comment': ['error', 'always'],
+- В комментариях текст отбивается пробелом от начала комментария.
+
 'generator-star-spacing': ['error', 'after'],
+- При создании генераторов, звездочка идет сразу после ключевого слова function без пробелов
+
 'rest-spread-spacing': 'error',
+- В spread-операторе точки не отделяются от названия коллекции
+
 'yield-star-spacing': ['error', 'after']
+- Звездочка после ключевого слова yield не отбивается пробелом. После звездочки проблел ставится всегда.
 
 ## Строки
 'no-multi-str': 'error', // запрет на использование переносов в ES5-строках
@@ -71,16 +138,6 @@
 'no-undefined': 'error', // нельзя использовать значение undefined
 'new-cap': 'error',
 
-# Конструкции языка
-
-## Условные операторы
-## Циклы
-## Функции
-## Переменные
-## Классы
-'constructor-super': 'error', // eslint:recommended
-
-
 # Предотвращение ошибок
 'semi': 'error',
 'unicode-bom': 'warn',
@@ -104,6 +161,7 @@
 
 ## Классы
 'no-this-before-super': 'error',  // eslint:recommended
+'constructor-super': 'error', // eslint:recommended
 
 
 ## Объявление переменных и функций
