Расширяет правила форматирования кода

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -105,28 +105,57 @@ if (condition) {
 
 ## Строки
 'no-multi-str': 'error', // запрет на использование переносов в ES5-строках
+- В строках, объявленных с помощью одинарных и двойных кавычек запрещено использовать переносы.
+
 'no-octal-escape': 'error',
+- В строках запрещено указывать код спецсимволов в восьмеричной системе счисления
+
+```javascript
+// Плохо
+var foo = "Copyright \251";
+
+// Хорошо
+var foo = "Copyright \u00A9";   // unicode
+```
+
 'quote-props': ['error', 'consistent'],
+- При создании объектов через литералы свойства должны объявляться в одинаковом стиле: или без кавычек или с ними.
+
 'quotes': ['error', 'single', {allowTemplateLiterals: true}],
+- В строках используются одинарные кавычки. Разрешено использовать строковые шаблоны. Если позволяет поддержка, предпочтение отдается строковым шаблонам.
 
 ## Числа
 'no-floating-decimal': 'error', // запрет на опускание нуля
+- В числах запрещено опускать ноль в дробной и целой части.
+
 'no-octal': 'error', //default
+- Запрещено использовать ведущий ноль при создании чисел, поскольку это приводит к созданию числа в восьмеричной системе счисления.
 
 ## Литералы
 'no-array-constructor': 'error',
+- Массивы должны создаваться через литерал массива, а не через конструктор. Допустимое исключение — создание массива определенной длины.
+
 'no-new-object': 'error',
+- Объекты должны создаваться через литерал объекта, а не через конструктор.
 
 ### Объекты
 'no-dupe-keys': 'error',
+- При создании объектов запрещено дублирование ключей.
+
 'no-dupe-args': 'error',
+- При описании функций запрещено дублировать названия параметров.
+
 'no-duplicate-case': 'error',
+- В операторе `switch` запрещено дублировать условия (case)
 
 ### Массивы
 
 ## Операторы
 'space-infix-ops': 'error',
+- В бинарных и тернарных операторах операнды и символы оператора отделяются пробелами.
+
 'space-unary-ops': ['error', {words: true, nonwords: false}],
+- Унарные операторы не отделяются от операнда пробелом. Исключения составляют операторы, состоящие из слов, а не символов, например оператор typeof.
 
 # Именование
 'no-label-var': 'error',
