Добавляет правила по именованию

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -159,13 +159,29 @@ var foo = "Copyright \u00A9";   // unicode
 
 # Именование
 'no-label-var': 'error',
+- Запрещено объявлять переменные, имена которых совпадают с именами используемых в коде лейблов
+
 'camelcase': 'error',
+- Все переменные должны быть названы в верблюжьем регистре. Исключения составляют константы которые должны именоваться прописными буквами в змеином регистре.
+
 'no-shadow': 'error',
+- Запрещено использовать имена переменных, которые используются во внешних областях видимости.
+
 'no-shadow-restricted-names': 'error',
+- Запрещено называть переменные и свойства ключевыми словами JSж
+
 'no-undef': 'error', //default // нельзя использовать необъявленные переменные
+- Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта `window/global`.
+
 'no-undef-init': 'error', // нельзя создавать переменные без значения
+- Запрещено объявлять переменные без значения.
+
 'no-undefined': 'error', // нельзя использовать значение undefined
+- Запрещено напрямую обращаться к значению undefined.
+
 'new-cap': 'error',
+- С заглавной буквы называются только функции-конструкторы.
+
 
 # Предотвращение ошибок
 'semi': 'error',
