Добавляет правила помогающие избежать распространенных ошибок

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -185,10 +185,19 @@ var foo = "Copyright \u00A9";   // unicode
 
 # Предотвращение ошибок
 'semi': 'error',
+- Все точки с запятой должны быть проставлены явно, не стоит рассчитывать на автоматическую расстановку точек с запятой ASI.
+
 'unicode-bom': 'warn',
+- Не рекомендуется использовать указатель Unicode BOM в коде, потому что код должен быть сохранен не в кодировке UTF-16, а в кодировке UTF-8, в которой нет указателя порядка бит.
+
 'curly': ['error', "all"],
+- Обязательно используются блоки кода даже если в выражении содержится одна строчка
+
 'no-empty': 'error',
+- В коде нет пустых блоков кода
+
 'strict': ['error', 'global'],
+- Код работает в строгом режиме: в начале всех файлов явно прописана директива `use strict`.
 
 ## Условные операторы
 'yoda': ['error', "never"],
