Добавляет правила помогающие избежать ошибок в условных операторах

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -200,13 +200,32 @@ var foo = "Copyright \u00A9";   // unicode
 - Код работает в строгом режиме: в начале всех файлов явно прописана директива `use strict`.
 
 ## Условные операторы
-'yoda': ['error', "never"],
+'yoda': ['error', "never"]
+- Запрещена "проверка Йоды" — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения не наоброт.
+
+```javascript
+if (1 === myValue) {} // Плохо
+if (myValue === 1) {} // Хорошо
+```
+
 'eqeqeq': 'error', // использование строгого сравнения
-'no-cond-assign': 'error', // eslint:recommended // запрет на присвоение в блоке условия
-'no-unsafe-negation': 'error', // небезопасное отрицание (использование ! в in или instanceof без скобок)
+- При сравнении двух значений используется оператор строгого сравнения вместо оператора нестрогого сравнения
+
+'no-cond-assign': 'error', // eslint:recommended // запрет на присвоение в блоке
+- В условных операторах не используется оператор присвоения
+
+'no-unsafe-negation': 'error', //
+- В условтях не используется небезопасное отрицание, например использование ! в in или instanceof без скобок.
+
 'use-isnan': 'error',
+- Запрещено сравнение с NaN. Для проверки, является результат операции числовым, нужно использовать `isNaN`.
+
 'no-fallthrough': 'error', // запрет на проваливание в switch
+- Запрещено использовать case без break или return в блоках switch.
+
 'no-nested-ternary': 'error',
+- Не используются вложенные тернарные операторы.
+
 
 ## Функции
 'consistent-return': 'error', // функция не возвращает undefined, особенно если есть другой return
