Добавляет правила про переменные

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -247,12 +247,18 @@ if (myValue === 1) {} // Хорошо
 
 ## Объявление переменных и функций
 'no-var': 'error',
+- При объявлении переменных предпочтение отдается ключевым словам let и const. Переменные объявляются через var только при наличии проблем с поддержкой кода.
+
 'no-redeclare': 'error', //default
+- Запрещено переопределять с помощью ключевого слова ранее созданные переменные
+
 'one-var': ['error', {
     var: 'never',
     let: 'never',
     const: 'never'
 }],
+- Запрещено использовать множественное объявление через одно ключевое слово. Для каждой переменной используется отдельный `var`, `let` или `const`.
+
 
 ### Объявление функций
 'no-func-assign': 'error',
