Добавляет правила про избежание ошибок при создании новых значений

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -281,12 +281,23 @@ function myFunc() {}; // Плохо
 - Вместо вызова функции через `apply` используется spread-оператор
 
 ### Создание значений
-'no-obj-calls': 'error', // запрет на создание значений с помощью конструкторов без new (Math(), JSON(), Reflect()).
+'no-obj-calls': 'error',
+- Не вызываются служебные конструкторы, создающие объекты из глобальной области видимости `Math(), JSON(), Reflect()`.
+
 'no-sparse-arrays': 'error', // запрет на массивы с пропусками
-'comma-dangle': ['error', 'only-multiline'],
-'no-new-wrappers': 'error', // запрет на вызов конструкторов для примитивов
+- При создании непустых массивов запрещено опускать пустые значения (ставить подряд несколько запятых)
+
+'comma-dangle': ['error', 'only-multiline']
+- При создании непустых объектов и массивов не используются «висячие» запятые
+
+'no-new-wrappers': 'error',
+- Не используются конструкторы примитивов, которые используются для автобоксинга `String`, `Number`, `Boolean`
+
 'new-parens': 'error',
-'no-new-symbol': 'error', // eslint:recommended
+- Конструкторы вызываются со скобками, даже если у них нет параметров.
+
+'no-new-symbol': 'error',
+- Символы (`Symbol`) создаются вызовом функции `Symbol` без ключевого слова `new`.
 
 ## Хорошие практики
 'no-with': 'error',
