Добавляет правила, рекомендующие использовать распространенные хорошие практики в коде

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -301,11 +301,22 @@ function myFunc() {}; // Плохо
 
 ## Хорошие практики
 'no-with': 'error',
+- Не используется конструкция `with`.
+
 'no-alert': 'error',
+- Не используются `alert`.
+
 'no-eval': 'error',
-'no-implied-eval': 'error', // запрет на код в строчках (например timeout)
-'no-script-url': 'error', // запрет на использование протокола javascript:
+- Не используется выполнение кода через `eval`.
+
+'no-implied-eval': 'error',
+- Не используется неявный eval — в функциях, которые поддерживают передачу исполняемого кода как строку, например `setTimeout`.
+
+'no-script-url': 'error',
+- Не используется протокол javascript.
+
 'no-new': 'error', // запрет на использование конструкторов для сайдэффектов
+- Конструкторы не используются без ключевого слова `new`.
 
 ### Манкипатчинг
 'no-extend-native': 'error', // запрет на манкипатчинг
