Добавляет правила, запрещающие манкипатчинг

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -319,8 +319,11 @@ function myFunc() {}; // Плохо
 - Конструкторы не используются без ключевого слова `new`.
 
 ### Манкипатчинг
-'no-extend-native': 'error', // запрет на манкипатчинг
+'no-extend-native': 'error',
+- Встроенные в язык объекты и прототипы не расширяются в рантайме
+
 'no-global-assign': 'error',
+- Не переопределяются глобальные значения (undefined, null, Object, window и прочие)
 
 ### Контекст
 'no-extra-bind': 'error', // запрет на использование bind там где не нужно (например IIFE)
