Добавляет правило, запрещающее удаление переменных через delete

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -334,6 +334,7 @@ function myFunc() {}; // Плохо
 
 ### Переменные
 'no-delete-var': 'error', //eslint:recommended
+- Переменные, объявленные через `var` не удаляются оператором `delete`
 
 ## Приведение типов
 'no-extra-boolean-cast': 'error',
